+ Show all songs in current file's folder. (Xavier ?)
+ Added an XDG compliant desktop file. (Jaako H Kyro)
* Fixed proper quoting/unicode issues in remote.
* Proper Qt argv/argc handling.
* Removed built-in expat because of FreeBSD problems. (D. Roethlisberger)
+ Added possibility to specify a criterion when calling AutoDJ from the
  command line. (Patch by Evan Felix)

BUGS FIXED:
* Fixed "_lib" -> "_library" in SConstruct error output.
  (Justus Schwartz) [done]
* Fixed "evenutally" typos in several context menus. (Reuben Thomas) [done]
* Looking at the play list from the WebUI caused XMMS to start, even if
  local player control is disabled. Fixed. (Adam Ward) [done]
* Consistent history recording when running in --no-gui mode. [done]
* Consistent Emacs formatting hints at the end of every file,
  and a tool to enforce this. (doc/update_format_tag) [done]
* Fixed "play now" starting from second entry if XMMS playlist was 
  completely empty before. (Jon Burgess) [done]
* Fixed sorting by "Last Played" column: Reset Last Played to -1 if
  Play Count == 0 on load. (Michael Albert) [done]
* Fixed a major Unicode issue. [done]
* Fixed move detection. (Josie Walker) [done]
* Fixed a segfault in the auto tagger. [done]
* Fixed link order problem. [done]
* Fixed the bug where madman would fail to find songs. [done]
* Fixed a rename box that was being too persistent.
  Qt bug, reported. Also added workaround.
  (reporter: io_alex_2004 through SF bug tracker) [done]
* Caught an exception that was thrown when a failing tag read would cause 
  database insertion to fail, and subsequently crash the program. [done]
  (Spotted by Klaus S. Madsen)
* Fixed configure to work around non-case-sensitive bashes. [done]
  (Christian Hammers)
* Added %askfile_XXX% expansions to plugin mechanism. [done]
  (Christian Hammers)
* Fixed the wretched "expat: parse error" bug, hopefully for real this 
  time. (Reproduced by Shawn) [done]